--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,18 @@
     tools:context="io.antmedia.android.MainActivity">
 
     <TextView
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="LIVE VIDEO BROADCASTER"
         android:onClick="openVideoBroadcaster"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"/>
+        android:text="EMERGENCY BROADCAST" />
 
     <TextView
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="LIVE VIDEO PLAYER"
         android:onClick="openVideoPlayer"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"/>
+        android:text="VIDEO PLAYER" />
 
 
 </LinearLayout>
