--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,31 @@
     tools:context="io.antmedia.android.MainActivity">
 
     <TextView
+        style="@android:style/Widget.DeviceDefault.TextView"
+        android:layout_width="match_parent"
+        android:layout_height="164dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center|center_horizontal"
+        android:onClick="openVideoBroadcaster"
+        android:text="EMERGENCY BROADCAST"
+        android:textAlignment="center"
+        android:textColor="#DC4040"
+        android:textSize="30sp" />
+
+    <!--TextView
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="openVideoBroadcaster"
-        android:text="EMERGENCY BROADCAST" />
+        android:onClick="openVideoPlayer"
+        android:text="VIDEO PLAYER" /-->
 
     <TextView
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="openVideoPlayer"
-        android:text="VIDEO PLAYER" />
+        android:layout_marginTop="90dp"
+        android:onClick="openAddNumber"
+        android:text="ADD NUMBER" />
 
 
 </LinearLayout>
