--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:onClick="openAddNumber"
-        android:text="ADD NUMBER" />
+        android:text="EMERGENCY CONTACT" />
 
 
 </LinearLayout>
